export default class ChosenInterface {
  add (entity) {}
  set (entities) {}
  get() {}
  isChosen(entity) {}
}